# Team-Model-Solution

./: README.md
2019.11.02 Mid-Central 2019/:  B.cpp  A.cpp  D.cpp  E.cpp  F.cpp  G.cpp  K.cpp
Training Code/2019.10.05 NAQ19/: A.cpp  B.cpp  E.cpp  H.cpp  J.cpp  K.cpp  M.cpp
Training Code/2019.10.12 GP of Korea, 18-19/: A.cpp  A_brute.cpp  Agen.cpp  D.cpp  E.cpp  E2.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  L.cpp
Training Code/2019.10.19 ECNA 2018/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  F1.cpp  G.cpp  I.cpp  J.cpp
Training Code/2019.10.26 SCUSA 2018/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  H_WA_at_last_test_case.cpp  H_robe.cpp  I.cpp  I2.cpp  J.cpp  J2.cpp  J3.cpp  K.cpp  L.cpp  L2.cpp
Training Code/2019.10.5 NAQ19/: C.cpp  D.cpp  G.cpp  I.cpp  L.cpp  L_jirayu.cpp
Training Code/2019.11.02 Mid-Central 2019/: B.cpp  C.cpp  CMakeLists.txt  H.cpp  H1.cpp  I.cpp  J.cpp  L.cpp
Training Code/2019.11.06 Pacific Northwest 2018/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  I2.cpp  J.cpp  K.cpp  L.cpp
Training Code/2019.11.09 NCNA 2019/: A.cpp  AQ.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  K2.cpp  K3.cpp  main.cpp  multiplicationTable.cpp
Training Code/2019.11.17 SEERC 2019/: A.cpp  B.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  F2.cpp  F3.cpp  F4.cpp  F5.cpp  G.cpp  I.cpp  J.cpp  K.cpp
Training Code/2019.11.24 Asia Shenyang 2018/: A.cpp  C.cpp  CMakeLists.txt  E.cpp  G.cpp  I.cpp  J.cpp  K.cpp  K2.cpp  L.cpp  M.cpp  test1.cpp
(+27 files in other folders)
